exports[`test Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Facebook
</a>
------------HTML PREVIEW---------------
<a
  class="normal"
  href="http://www.facebook.com"
>
  Facebook
</a>
`;

exports[`test Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Facebook
</a>
------------HTML PREVIEW---------------
<a
  class="hovered"
  href="http://www.facebook.com"
>
  Facebook
</a>
`;

exports[`test Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Facebook
</a>
------------HTML PREVIEW---------------
<a
  class="normal"
  href="http://www.facebook.com"
>
  Facebook
</a>
`;
